@@ -1,6 +1,9 @@
 0.12 - ...
 * Fixed installation bug
 * Removed fts and cdefs from libcobalt
+* Fixed GNUmakefile
+* Various small musl-to-glibc adaptions for libcobalt
+* Added strlcpy and strlcat
 
 0.11 - Sep 17 2023
 * Removed orphaned binary
